--- a/Landing Pages/styles/cerise_v1.0.0.css
+++ b/Landing Pages/styles/cerise_v1.0.0.css
@@ -317,19 +317,19 @@
 }
 
 .txtl-wrapper .quarrix_product_section .quarrix_product_section__item.product-1 {
-  background-image: url('https://4188535.fs1.hubspotusercontent-na1.net/hubfs/4188535/attic-protection-image.png');
+  background-image: url('https://www.quarrix.com/QuarrixDev/media/home2/attic-protection-image.png');
 }
 
 .txtl-wrapper .quarrix_product_section .quarrix_product_section__item.product-2 {
-  background-image: url('https://4188535.fs1.hubspotusercontent-na1.net/hubfs/4188535/roof-protection-image.png');
+  background-image: url('https://www.quarrix.com/QuarrixDev/media/home2/roof-protection-image.png');
 }
 
 .txtl-wrapper .quarrix_product_section .quarrix_product_section__item.product-3 {
-  background-image: url('https://4188535.fs1.hubspotusercontent-na1.net/hubfs/4188535/wall-protection-image.png');
+  background-image: url('https://www.quarrix.com/QuarrixDev/media/home2/wall-protection-image.png');
 }
 
 .txtl-wrapper .quarrix_product_section .quarrix_product_section__item.product-4 {
-  background-image: url('https://4188535.fs1.hubspotusercontent-na1.net/hubfs/4188535/composite-tile-image.png');
+  background-image: url('https://www.quarrix.com/QuarrixDev/media/home2/composite-tile-image.png');
 }
 
 .txtl-wrapper .quarrix_product_section .quarrix_product_section__item .quarrix_product_section__item-title-wrapper {
