--- a/Landing Pages/styles/cerise_v1.0.0.css
+++ b/Landing Pages/styles/cerise_v1.0.0.css
@@ -7,27 +7,31 @@
   box-sizing: border-box; 
 }
 
-.txtl-wrapper {
+body {
+  padding: 0;
+  margin: 0;
+}
+
+/* .txtl-wrapper {
   max-width: 1440px;
   background-color: #fff;
   display: block;
   margin: auto auto;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
+} */
 
 /* Start style for Quarrix Homepage */
 /* Quarrix Hero */
 .txtl-wrapper .quarrix_hero {
-  background-image: url('https://4188535.fs1.hubspotusercontent-na1.net/hubfs/4188535/quarrix-hero-image.webp');
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  padding: 120px 20px;
+  padding: 120px 0px;
 }
 
 .txtl-wrapper .quarrix_hero .quarrix_hero__text_wrapper {
-  max-width: 1200px;
+  max-width: 1440px;
   margin: 0 auto;
   padding: 0 20px;
 }
@@ -40,6 +44,7 @@
   max-width: 850px;
   letter-spacing: 0px;
   margin-bottom: 26px;
+  text-align: left !important;
 }
 
 .txtl-wrapper .quarrix_hero .quarrix_hero__text_wrapper p {
@@ -49,6 +54,7 @@
   max-width: 634px;
   letter-spacing: 0px;
   margin-bottom: 45px;
+  text-align: left !important;
 }
 
 .txtl-wrapper .quarrix_hero .quarrix_hero__button_wrapper {
@@ -73,13 +79,13 @@
 }
 
 .txtl-wrapper .btn.btn-white {
-  color: #055641;
+  color: #055641 !important;
   background-color: #fff;
   border: 1px solid #fff;
 }
 
 .txtl-wrapper .btn.btn-white:hover {
-  color: #fff;
+  color: #fff !important;
   background-color: transparent;
 }
 
@@ -88,13 +94,13 @@
 }
 
 .txtl-wrapper .btn.btn-transparent {
-  color: #fff;
+  color: #fff !important;
   background-color: transparent;
   border: 1px solid #fff;
 }
 
 .txtl-wrapper .btn.btn-transparent:hover {
-  color: #055641;
+  color: #055641 !important;
   background-color: #fff;
 }
 
@@ -167,7 +173,7 @@
   gap: 30px;
   position: relative;
   z-index: 2;
-  max-width: 1200px;
+  max-width: 1440px;
   margin: 0 auto;
   padding: 0 20px;
 }
@@ -203,21 +209,23 @@
 }
 
 .txtl-wrapper .quarrix_video_section__text_wrapper h2 {
-  color: #055641;
+  color: #055641 !important;
   font-weight: 700;
   letter-spacing: 0px;
   font-size: 55px;
   line-height: 60px;
   margin: 0 0 15px;
+  text-align: left !important;
 }
 
 .txtl-wrapper .quarrix_video_section__text_wrapper p {
-  color: #0B0B0B;
+  color: #0B0B0B !important;
   font-weight: 400;
   letter-spacing: 0px;
   font-size: 17px;
   line-height: 28px;
   margin-bottom: 30px;
+  text-align: left !important;
 }
 
 .txtl-wrapper .quarrix_video_section__button_wrapper {
@@ -227,13 +235,13 @@
 }
 
 .txtl-wrapper .btn.btn-green {
-  color: #fff;
+  color: #fff !important;
   background-color: #055641;
   border: 1px solid #055641;
 }
 
 .txtl-wrapper .btn.btn-green:hover {
-  color: #055641;
+  color: #055641 !important;
   background-color: transparent;
 }
 
@@ -242,13 +250,13 @@
 }
 
 .txtl-wrapper .btn.btn-transparent-green {
-  color: #055641;
+  color: #055641 !important;
   background-color: transparent;
   border: 1px solid #055641;
 }
 
 .txtl-wrapper .btn.btn-transparent-green:hover {
-  color: #fff;
+  color: #fff !important;
   background-color: #055641;
 }
 
@@ -275,7 +283,7 @@
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   gap: 15px;
-  max-width: 1200px;
+  max-width: 1440px;
   margin: 0 auto;
   padding: 0 20px;
   position: relative;
@@ -284,7 +292,7 @@
 
 .txtl-wrapper .quarrix_product_section h2 {
   text-align: center;
-  color: #055641;
+  color: #055641 !important;
   font-weight: 700;
   font-size: 68px;
   line-height: 79px;
@@ -294,7 +302,7 @@
 
 .txtl-wrapper .quarrix_product_section p {
   text-align: center;
-  color: #000;
+  color: #000 !important;
   font-weight: 400;
   font-size: 17px;
   line-height: 28px;
@@ -316,22 +324,6 @@
   text-decoration: none;
 }
 
-.txtl-wrapper .quarrix_product_section .quarrix_product_section__item.product-1 {
-  background-image: url('https://www.quarrix.com/QuarrixDev/media/home2/attic-protection-image.png');
-}
-
-.txtl-wrapper .quarrix_product_section .quarrix_product_section__item.product-2 {
-  background-image: url('https://www.quarrix.com/QuarrixDev/media/home2/roof-protection-image.png');
-}
-
-.txtl-wrapper .quarrix_product_section .quarrix_product_section__item.product-3 {
-  background-image: url('https://www.quarrix.com/QuarrixDev/media/home2/wall-protection-image.png');
-}
-
-.txtl-wrapper .quarrix_product_section .quarrix_product_section__item.product-4 {
-  background-image: url('https://www.quarrix.com/QuarrixDev/media/home2/composite-tile-image.png');
-}
-
 .txtl-wrapper .quarrix_product_section .quarrix_product_section__item .quarrix_product_section__item-title-wrapper {
   display: flex;
   align-items: center;
@@ -341,7 +333,7 @@
 
 .txtl-wrapper .quarrix_product_section .quarrix_product_section__item .quarrix_product_section__item-title-wrapper p {
   margin: 0;
-  color: #fff;
+  color: #fff !important;
   letter-spacing: 0px;
   font-weight: 800;
   font-size: 25px;
@@ -372,7 +364,7 @@
   position: relative;
   z-index: 1;
   display: flex;
-  max-width: 1200px;
+  max-width: 1440px;
   margin: 0 auto;
   flex-direction: column;
   gap: 15px;
@@ -430,21 +422,23 @@
 }
 
 .txtl-wrapper .quarrix_ventilation_gallery h2 {
-  color: #055641;
+  color: #055641 !important;
   font-weight: 700;
   font-size: 50px;
   line-height: 53px;
   margin: 0 0 30px;
   letter-spacing: 0px;
+  text-align: left !important;
 }
 
 .txtl-wrapper .quarrix_ventilation_gallery p {
-  color: #000;
+  color: #000 !important;
   font-weight: 400;
   font-size: 17px;
   line-height: 28px;
   margin: 0 auto 20px;
   letter-spacing: 0px;
+  text-align: left !important;
 }
 
 .txtl-wrapper .quarrix_ventilation_gallery .quarrix_ventilation_gallery__wrapper_bottom {
@@ -486,7 +480,7 @@
 }
 
 .txtl-wrapper .quarrix_ventilation_gallery .quarrix_ventilation_gallery__bottom_left_one-image img {
-  max-height: 695px;
+  max-height: 675px;
 }
 
 .txtl-wrapper .quarrix_ventilation_gallery .quarrix_ventilation_gallery__bottom_right_left {
@@ -534,7 +528,7 @@
 .txtl-wrapper .quarrix_banner {
   padding: 0 20px;
   background-color: #055641;
-  max-width: 1200px;
+  max-width: 1440px;
   margin: 0 auto;
   position: relative;
   z-index: 1;
@@ -570,7 +564,7 @@
 .txtl-wrapper .quarrix_banner .quarrix_banner__row .quarrix_banner__left::after {
   content: '';
   position: absolute;
-  right: -70px;
+  right: -140px;
   top: 0;
   width: 300px;
   height: 100%;
@@ -615,8 +609,7 @@
 /* Cagalog section */
 .txtl-wrapper .quarrix_catalog__wrapper {
   padding: 200px 20px 80px;
-  max-width: 1250px;
-  margin: -130px auto 0;
+  margin: -130px 0 0;
   background: linear-gradient(0deg, rgba(217, 217, 217, 0.14) 58.58%, rgba(115, 115, 115, 0.14) 100%);
 }
 
@@ -624,7 +617,7 @@
   text-align: center;
   margin: 0 0 40px;
   letter-spacing: 0px;
-  color: #000;
+  color: #000 !important;
   font-size: 60px;
   line-height: 60px;
   font-weight: 700;
@@ -635,6 +628,8 @@
   background-color: #fff;
   border-radius: 4px;
   border: 1px solid #E4E4E4;
+  max-width: 1440px;
+  margin: 0 auto;
 }
 
 .txtl-wrapper .quarrix_catalog__wrapper .quarrix_catalog__iframe iframe {
@@ -645,7 +640,7 @@
 
 /* Quarrix faq section */
 .txtl-wrapper .quarrix_faq_section {
-  padding: 80px 0 100px;
+  padding: 80px 20px 100px;
   text-align: center;
 }
 
@@ -653,16 +648,16 @@
   text-align: center;
   margin: 0 0 40px;
   letter-spacing: 0px;
-  color: #000;
+  color: #000 !important;
   font-size: 60px;
   line-height: 60px;
   font-weight: 700;
 }
 
 .txtl-wrapper .quarrix_faq_section .quarrix_faq_section__item_wrapper {
-  max-width: 1000px;
+  max-width: 1240px;
   margin: 0 auto;
-  padding: 0 20px;
+  padding: 0;
 }
 
 .txtl-wrapper .quarrix_faq_section .quarrix_faq_section__item_wrapper .quarrix_faq_section__item_title_wrapper {
@@ -680,7 +675,7 @@
 }
 
 .txtl-wrapper .quarrix_faq_section .quarrix_faq_section__item_wrapper .quarrix_faq_section__item_title_wrapper .quarrix_faq_section__item_question {
-  color: #000;
+  color: #000 !important;
   font-size: 25px;
   text-align: left;
   line-height: 57px;
@@ -765,14 +760,13 @@
 /* Quarrix map section */
 .txtl-wrapper .quarrix_map_section {
   padding: 120px 0;
-  background-image: url('https://4188535.fs1.hubspotusercontent-na1.net/hubfs/4188535/map-image.png');
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
 }
 
 .txtl-wrapper .quarrix_map_section .quarrix_map_section__wrapper {
-  max-width: 1200px;
+  max-width: 1440px;
   margin: 0 auto;
   padding: 0 20px;
 }
@@ -1020,7 +1014,7 @@
   }
 
   .txtl-wrapper .quarrix_faq_section {
-    padding: 60px 0;
+    padding: 60px 20px;
   }
 
   .txtl-wrapper .quarrix_faq_section h2 {
@@ -1063,10 +1057,12 @@
 @media(max-width: 576px) {
   .txtl-wrapper .quarrix_hero .quarrix_hero__button_wrapper {
     flex-direction: column;
+    align-items: start;
   }
 
   .txtl-wrapper .quarrix_multi_column {
     grid-template-columns: repeat(1, 1fr);
+    padding: 0 20px;
   }
 
   .txtl-wrapper .quarrix_product_section .quarrix_product_section__row {
@@ -1119,7 +1115,7 @@
     bottom: 20px;
     left: 50%;
     transform: translateX(-50%);
-    max-width: 130px;
+    max-width: 300px;
     justify-content: center;
     width: 100%;
   }
@@ -1139,6 +1135,9 @@
 .txtl-wrapper .quarrix-lp-hero {
   padding: 200px 0;
   position: relative;
+  max-width: 3000px;
+  margin: 0 auto;
+  overflow: hidden;
 }
 
 .txtl-wrapper .quarrix-lp-hero__wrap {
@@ -1152,6 +1151,8 @@
 
 .txtl-wrapper .quarrix-lp-hero__image img {
   width: 100%;
+  height: 545px;
+  object-fit: cover;
 }
 
 .txtl-wrapper .quarrix-lp-hero__banner-wrap img {
@@ -1192,13 +1193,13 @@
   font-size: 60px;
   font-weight: 700;
   letter-spacing: 0;
-  color: #1a1a1a;
+  color: #1a1a1a !important;
   margin: 0;
 }
 
 .txtl-wrapper .quarrix-lp-hero__description {
   font-size: 18px;
-  color: #373737;
+  color: #373737 !important;
 }
 
 .txtl-wrapper .experience-the-benefits {
@@ -1244,15 +1245,17 @@
   line-height: 32px;
   margin-bottom: 0;
   letter-spacing: 0;
+  color: #1A1A1A !important;
 }
 
 .txtl-wrapper .experience-the-benefits__card p {
   font-size: 16px;
   line-height: 32px;
+  color: #1A1A1A !important;
 }
 
 .txtl-wrapper .experience-the-benefits__heading {
-  color: #1a1a1a;
+  color: #1a1a1a !important;
   font-weight: 700;
   font-size: 60px;
   letter-spacing: 0;
@@ -1309,6 +1312,7 @@
   position: absolute;
   width: 100%;
   height: 100%;
+  object-fit: cover;
   z-index: 0;
 }
 
@@ -1321,7 +1325,6 @@
 
 .txtl-wrapper .quarrix-lp-subscription {
   padding: 125px 0;
-  background: url("https://4188535.fs1.hubspotusercontent-na1.net/hubfs/4188535/Siding%20Panels%20Background.png");
 }
 
 .txtl-wrapper .quarrix-lp-subscription__wrap {
@@ -1335,6 +1338,7 @@
   line-height: 70px;
   letter-spacing: 0;
   margin: 0;
+  color: #1A1A1A !important;
 }
 
 .txtl-wrapper .quarrix-lp-subscription__copy form input {
@@ -1349,13 +1353,13 @@
   margin-top: 8px;
   font-size: 12px;
   font-weight: 300;
-  color: #000;
+  color: #000 !important;
 }
 
 .txtl-wrapper .quarrix-lp-subscription__description {
   font-size: 18px;
   line-height: 28px;
-  color: #373737;
+  color: #373737 !important;
   box-shadow: 0px 0px 19.5px 0px #ffffffcc;
   margin-bottom: 16px;
   max-width: 520px;
@@ -1376,12 +1380,11 @@
   margin: 0 auto;
   position: relative;
   z-index: 1;
-  border-radius: 8px;
   box-shadow: 0px 4px 14px 0px #00000040;
 }
 
 .txtl-wrapper .quarrix-lp-banner-v2 .quarrix-lp-banner-v2__row {
-  max-width: 1200px;
+  max-width: 1440px;
   margin: 0 auto;
   display: flex;
   align-items: center;
@@ -1448,7 +1451,7 @@
   top: 0;
   z-index: 0;
   width: 100%;
-  max-width: 550px;
+  max-width: 730px;
   object-fit: cover;
   border-radius: 8px;
 }
@@ -1471,6 +1474,50 @@
   width: auto;
 }
 
+@media screen and (max-width: 1650px) {
+  .txtl-wrapper .quarrix-lp-banner-v2 .quarrix-lp-banner-v2__row .quarrix-lp-banner-v2__right_img {
+    max-width: 630px;
+  }
+}
+
+@media screen and (max-width: 1440px) {
+  .txtl-wrapper .quarrix-lp-banner-v2 .quarrix-lp-banner-v2__row .quarrix-lp-banner-v2__right_img {
+    max-width: 550px;
+  }
+}
+
+@media screen and (max-width: 1240px) {
+  .txtl-wrapper .quarrix-lp-hero {
+    padding: 190px 0;
+  }
+
+  .txtl-wrapper .quarrix_banner .quarrix_banner__row .quarrix_banner__left::after {
+    right: -78px;
+  }
+
+  .txtl-wrapper .quarrix-lp-hero__banner-wrap img {
+    width: 80%;
+  }
+
+  .txtl-wrapper .quarrix-lp-hero__banner-wrap img:last-child {
+    top: 15px;
+    width: 25%;
+  }
+
+  .txtl-wrapper .quarrix-lp-hero__heading {
+    font-size: 50px;
+    line-height: 53px;
+  }
+
+  .txtl-wrapper .quarrix-lp-banner-v2 .quarrix-lp-banner-v2__row .quarrix-lp-banner-v2__right_img {
+    max-width: 490px;
+  }
+
+  .txtl-wrapper .quarrix-lp-banner-v2 .quarrix-lp-banner-v2__row .quarrix-lp-banner-v2__left::after {
+    right: -200px;
+  }
+}
+
 @media screen and (max-width: 992px) {
   .txtl-wrapper .quarrix-lp-hero {
     overflow: hidden;
@@ -1482,6 +1529,13 @@
     width: 150%;
     top: 20px;
     right: -65%;
+  }
+  .txtl-wrapper .quarrix-lp-hero__image img {
+    height: auto;
+  }
+  .txtl-wrapper .quarrix-lp-subscription__heading h2 {
+    font-size: 50px;
+    line-height: 53px;
   }
   .txtl-wrapper .quarrix-lp-hero__banner-wrap img:last-child {
     width: 39%;
@@ -1511,6 +1565,15 @@
     width: 100%;
     height: 50%;
     bottom: unset;
+  }
+  .txtl-wrapper .experience-the-benefits .experience-the-benefits__heading {
+    font-size: 50px;
+    line-height: 53px;
+    margin: 0 0 40px;
+  }
+  .txtl-wrapper .quarrix-lp-banner-v2 .quarrix-lp-banner-v2__row .quarrix-lp-banner-v2__left h2 {
+    font-size: 50px;
+    line-height: 53px;
   }
   .txtl-wrapper .quarrix-lp-banner-v1__wrap {
     flex-direction: column;
