feat: created hero swiper

--- a/Landing Pages/styles/cerise.css
+++ b/Landing Pages/styles/cerise.css
@@ -33,13 +33,24 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  padding: 120px 0px;
+  /* padding: 120px 0px; */
+  height: 90vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.txtl-wrapper .quarrix_hero .quarrix_hero_video {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
 }
 
 .txtl-wrapper .quarrix_hero .quarrix_hero__text_wrapper {
   max-width: 1440px;
   margin: 0 auto;
   padding: 0 20px;
+  width: 100%;
 }
 
 .txtl-wrapper .quarrix_hero .quarrix_hero__text_wrapper h1 {
@@ -49,7 +60,7 @@ body {
   font-weight: 700;
   max-width: 850px;
   letter-spacing: 0px;
-  margin-bottom: 26px;
+  margin: 0 0 26px 0;
   text-align: left !important;
 }
 
@@ -816,7 +827,8 @@ body {
   }
 
   .txtl-wrapper .quarrix_hero {
-    padding: 60px 0;
+    /* padding: 60px 0; */
+    height: 100vh;
   }
 
   .txtl-wrapper .quarrix_hero .quarrix_hero__text_wrapper h1 {
